@@ -1,0 +1,2 @@
+""" Apply geotags field to default Archetypes CT
+"""
